# ZeroSort

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  FEATURES.md  LICENSE  README-zh.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
docs/: updater.md
src/: env.d.ts  i18n.ts  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  machine_id.rs  main.rs  paths.rs  state.rs
src-tauri/src/services/: credentials.rs  db.rs  images.rs  license.rs  mod.rs  store.rs  sync.rs
src/dev/: seed.ts
src/hooks/: useAppUpdater.ts  useBatchRegenerate.ts  useBeforeUnloadGuard.ts  useCalendarTimeGridSelection.ts  useDebouncedCallback.ts  useEditorSelection.ts  useIsDarkTheme.ts  useIsLargeScreen.ts  useLicenseGate.ts  useLoadNoteContent.ts  useMouseDown.ts  useNoModelSelectedToast.ts  useNoteActions.ts  useRegisterSaveCallback.ts  useScrollPosition.ts  useTimelineManager.ts  useTimelineScroll.ts
src/lib/: actions.ts  atomBlockMarkdown.ts  constants.ts  credentials.ts  desktop-adapter.ts  dialog.ts  exportAssets.ts  fs.ts  images.ts  io.ts  license.ts  markdown.ts  markdownDetection.ts  persistence.ts  proFeatureGate.ts  tagNames.ts  updater.ts  utils.ts  workspaceTree.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/routes/: __root.tsx  index.tsx  settings.tsx
(+253 files in other folders)
