[package]
name = "zerosort"
version = "1.0.0"
description = "ZeroSort desktop note-taking app"
authors = ["ZeroSort"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
name = "zerosort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls", "with-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
infer = "0.16"
hex = "0.4"
regex = "1"
urlencoding = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
